--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
                         face="Courier New, Courier, monospace"><font
                         color="#ffffff" face="Courier New, Courier, monospace"><font
                         face="Courier New, Courier, monospace">
+
+                     09.13.2021 : <a
+                        href="https://github.com/PhysixProject/physix/releases/tag/Physix-Project-Beta-v3.6">Beta-v3.6
+                     Released</a> - Coffee Bean Eclipse<br>
+                     <br>
+
                      04.08.2021 : <a
                         href="https://github.com/PhysixProject/physix/releases/tag/PhysixProject-Beta-v3.5">Beta-v3.5
                      Released</a> - Sandwich Disassembler<br>
